---------------------------------------------------------------------------------------------------
Version: 4.1.7
Date: 04. 07. 2019
  Changes:
    - Requests with 0 amount are no longer set in the vanilla gui
---------------------------------------------------------------------------------------------------
Version: 4.1.6
Date: 03. 07. 2019
  Changes:
    - Adding AutoTrash to an existing save only opens the gui when requests/trash is set
  Bugfixes:
    - Fixed items in armor, gun and ammo inventory not being counted for the request status display
    - Fixed possible crash when loading a scenario in the map editor
---------------------------------------------------------------------------------------------------
Version: 4.1.5
Date: 23. 06. 2019
  Changes:
    - Preset textfield only gets cleared when selecting multiple presets
    - Select all text when clicking the preset textfield
    - Adding AutoTrash to an existing save will import existing request/trash filters
---------------------------------------------------------------------------------------------------
Version: 4.1.4
Date: 18. 06. 2019
  Bugfixes:
    - Fixed crash when entering a Factorissimo2 building
    - Fixed error when creating a new scenario via map editor
---------------------------------------------------------------------------------------------------
Version: 4.1.3
Date: 16. 06. 2019
  Changes:
    - Added command: /at_import : Imports the vanilla request and trash settings into the mod gui
  Bugfixes:
    - Fixed error when updating players without a character
---------------------------------------------------------------------------------------------------
Version: 4.1.2
Date: 16. 06. 2019
  Features:
    - Combined logistic requests and trash configuration into one window
    - Click and drop: Hold shift when clicking a configured item, then shift click another button to swap the buttons